results/SpecGenBench/2-shot/log-UniqueNumNested-2023_11_28_03_43_46.txt
public class UniqueNumNested {

    //@ requires arr != null;
    //@ ensures \result == -1 <==> (\forall int i, j; 0 <= i && i < arr.length && 0 <= j && j < arr.length && i != j; arr[i] != arr[j]);
    //@ ensures 0 <= \result && \result < arr.length ==> (\forall int i; 0 <= i && i < \result; arr[i] != arr[\result]);
    //@ ensures \result == -1 ==> (\forall int i; 0 <= i && i < arr.length; arr[i] != arr[\result]);
    public static int uniqueNum(int[] arr) {
        for (int i = 0; i < arr.length; ++i) {
            for (int j = i + 1; j < arr.length; ++j) {
                if(arr[i] == arr[j])
                    break;
            }
            if(j == arr.length)
                return i;
        }
        return -1;
    }
    
}
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:13: error: cannot find symbol
            if(j == arr.length)
               ^
  symbol:   variable j
  location: class UniqueNumNested
1 error

